cmake_minimum_required(VERSION 3.27)
project(Helium-Engine DESCRIPTION "A Basic Game Engine" LANGUAGES CXX HOMEPAGE_URL "https://github.com/HeliumFork34/Helium-Engine")
add_executable(Helium-Engine "main.cpp")
add_subdirectory(Pentagram)
target_include_directories(Helium-Engine PUBLIC Pentagram)
target_link_libraries(Helium-Engine PUBLIC Pentagram)
file(REMOVE ${CMAKE_BINARY_DIR}\\res)
file(COPY res DESTINATION ${CMAKE_BINARY_DIR})
